Refactor the Maven Surefire (Build) Plugin to declare all the necessary JVM module options to get Apache Geode processes running correctly on Java 17.
Closes #604.